--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,5 @@ services:
   - type: web
     name: ssrf-redirector
     env: python
-    buildCommand: ""
-    startCommand: python redirector.py
+    startCommand: gunicorn redirector:app --bind 0.0.0.0:$PORT --workers 2
     plan: free
-    envVars:
-      - key: PORT
-        value: 8080
